--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,8 +56,8 @@ askama = "0.12"
 # Email
 lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
 
-# GrabNet integration (local path)
-grabnet = { path = "../grab", package = "grabnet" }
+# GrabNet P2P network
+grabnet = { git = "https://github.com/mwillis775/grab.git", branch = "main" }
 
 [dev-dependencies]
 tempfile = "3"
